adding the gui2 proto: Using Clutter-GST!

--- a/configure.ac
+++ b/configure.ac
@@ -75,6 +75,10 @@ PKG_CHECK_MODULES([CLUTTERGTK], [clutter-gtk-0.10 >= 0.10])
 AC_SUBST([CLUTTERGTK_LIBS])
 AC_SUBST([CLUTTERGTK_CFLAGS])
 
+# Clutter-GST
+PKG_CHECK_MODULES([CLUTTERGST], [clutter-gst-0.10 >= 0.10])
+AC_SUBST([CLUTTERGST_LIBS])
+AC_SUBST([CLUTTERGST_CFLAGS])
 
 AX_CHECK_GL
 AX_CHECK_GLU
