--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = toonloop gtk-clutter-proto
+bin_PROGRAMS = toonloop gtk-clutter-proto gui2
 # gtkshare
 
 toonloop_SOURCES = main.cpp gltools.cpp draw.cpp gui.cpp pipeline.cpp gstgtk.cpp application.cpp
@@ -9,4 +9,8 @@ toonloop_LDADD = $(LIBM_LIBS) $(LIBTHREAD_LIBS) $(LIBLO_LIBS) $(GST_LIBS) $(GSTA
 gtk_clutter_proto_SOURCES = gtk-clutter-proto.cpp
 gtk_clutter_proto_CXXFLAGS = $(LIBM_CXXFLAGS) $(LIBTHREAD_CXXFLAGS)  $(LIBLO_CXXFLAGS) $(GST_CFLAGS) $(BOOST_CPPFLAGS) $(GL_CFLAGS) $(GLU_CFLAGS) $(GTKGLEXT_CFLAGS) $(CLUTTER_CFLAGS) $(CLUTTERGTK_CFLAGS)
 gtk_clutter_proto_LDADD = $(LIBM_LIBS) $(LIBTHREAD_LIBS) $(LIBLO_LIBS) $(GST_LIBS) $(GSTAPP_LIBS) $(BOOST_LIBS)  $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(GTKGLEXT_LIBS) $(CLUTTER_LIBS) $(CLUTTERGTK_LIBS)
+
+gui2_SOURCES = gui2.cpp
+gui2_CXXFLAGS = $(LIBM_CXXFLAGS) $(LIBTHREAD_CXXFLAGS)  $(LIBLO_CXXFLAGS) $(GST_CFLAGS) $(BOOST_CPPFLAGS) $(GL_CFLAGS) $(GLU_CFLAGS) $(CLUTTER_CFLAGS) $(CLUTTERGTK_CFLAGS) $(CLUTTERGST_CFLAGS)
+gui2_LDADD = $(LIBM_LIBS) $(LIBTHREAD_LIBS) $(LIBLO_LIBS) $(GST_LIBS) $(GSTAPP_LIBS) $(BOOST_LIBS)  $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(CLUTTER_LIBS) $(CLUTTERGTK_LIBS) $(CLUTTERGST_LIBS)
 
