the tinyxml files need to be part of the tarball

--- a/libs/tinyxml/Makefile.am
+++ b/libs/tinyxml/Makefile.am
@@ -3,3 +3,4 @@ noinst_LTLIBRARIES = libtinyxml.la
 #noinst_LIBRARIES = libtinyxml.la
 
 libtinyxml_la_SOURCES = tinystr.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp tinystr.h tinyxml.h
+EXTRA_DIST = $(libtinyxml_la_SOURCES)
